# edhclient

./: .gitignore  pyproject.toml
src/edhclient/: __init__.py  client.py
src/edhclient/config/: config.toml
src/edhclient/core/: config.py
