[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edhclient"
version = "0.1.0"
description = "Client for EDH"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "xarray",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"edhclient" = ["config/*.toml"]
